--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/slider": "^4.5.7",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
@@ -23,7 +23,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "^5.4.1",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-web": "^0.20.0",
     "react-redux": "^9.2.0",
