--- a/package.json
+++ b/package.json
@@ -16,19 +16,21 @@
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
     "@reduxjs/toolkit": "^2.8.2",
+    "@supabase/supabase-js": "^2.50.0",
     "expo": "~53.0.11",
     "expo-camera": "~16.1.8",
+    "expo-dev-client": "~5.2.0",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.14",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "react-redux": "^9.2.0",
-    "expo-dev-client": "~5.2.0",
-    "expo-updates": "~0.28.14"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
