--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
     "@reduxjs/toolkit": "^2.8.2",
+    "@expo-google-fonts/league-spartan": "^0.2.3",
+    "@expo-google-fonts/nunito": "^0.2.3",
     "expo": "~53.0.11",
+    "expo-splash-screen": "~0.29.6",
     "expo-camera": "~16.1.8",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
