--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/league-spartan": "^0.2.3",
+    "@expo-google-fonts/nunito": "^0.2.3",
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.3.15",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
     "@reduxjs/toolkit": "^2.8.2",
-    "@expo-google-fonts/league-spartan": "^0.2.3",
-    "@expo-google-fonts/nunito": "^0.2.3",
     "expo": "~53.0.11",
-    "expo-splash-screen": "~0.29.6",
     "expo-camera": "~16.1.8",
+    "expo-dev-client": "~5.2.0",
+    "expo-splash-screen": "~0.29.6",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.14",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
@@ -29,9 +32,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-web": "^0.20.0",
-    "react-redux": "^9.2.0",
-    "expo-dev-client": "~5.2.0",
-    "expo-updates": "~0.28.14"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
