--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "vitest run"
   },
   "dependencies": {
     "@expo-google-fonts/league-spartan": "^0.2.3",
@@ -19,6 +20,7 @@
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
     "@reduxjs/toolkit": "^2.8.2",
+    "@supabase/supabase-js": "^2.87.1",
     "expo": "~53.0.11",
     "expo-camera": "~16.1.8",
     "expo-dev-client": "~5.2.0",
@@ -31,13 +33,16 @@
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.20.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "vitest": "^4.0.15"
   },
   "private": true
 }
