--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:integration": "vitest run __tests__/integration",
+    "test:unit": "vitest run __tests__/unit"
   },
   "dependencies": {
     "@expo-google-fonts/league-spartan": "^0.2.3",
