--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-splash-screen": "~0.29.6",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.14",
+    "openai": "^4.28.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
@@ -43,6 +44,7 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.0.10",
+    "dotenv": "^17.2.3",
     "typescript": "~5.8.3",
     "vitest": "^4.0.15"
   },
